traffic/virtualservice-canary-deployment/destinationRule.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: my-app
spec:
  host: my-app-primary
  subsets:
  - name: v1
    labels:
      app: my-app
      version: v1
  - name: v2
    labels:
      app: my-app
      version: v2
