traffic/virtualservice-canary-deployment/virtualService.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: my-app
spec:
  hosts:
  - my-app.example.com
  http:
  - route:
    - destination:
        host: my-app-primary
        subset: v1
      weight: 90
    - destination:
        host: my-app-primary
        subset: v2
      weight: 10
    timeout: 5s
